# WhatXtract

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  LICENSE  README.md  pyproject.toml  ruff.toml
docs/: modules.rst
docs/source/: conf.py  index.rst
src/whatxtract/: __init__.py  __main__.py  constants.py  logging_setup.py  utils.py  wa_web.py  waweb.py
whatxtract/: __init__.py  __main__.py  constants.py  helper_scripts.js  logger_setup.py  logging_setup.py  test.py  utils.py  wa_web.py
